# src/routes/endereco-route.js
@@ -17,6 +17,6 @@ router.post('/', controller.post);
 
 router.put('/:id', controller.put);
 
-router.delete('/', controller.delete);
+router.delete('/:id', controller.delete);
 
 module.exports = router;
